fix: alignment

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -532,6 +532,10 @@ section {
   border-radius: 50px;
 }
 
+.plan-title {
+  height: 6rem;
+}
+
 /* Responsive Design */
 @media (max-width: 768px) {
   .pricing-plans {
